--- a/scss/prepros-6.config
+++ b/scss/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "onlineVueAPI",
+  "name": "week4_VueAPI",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [
@@ -15,7 +15,9 @@
   "fileTree": {
     "expandedDirs": [
       "loading",
-      "login"
+      "login",
+      "tool",
+      "style"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -86,7 +88,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7892,
+    "port": 7893,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
